# minipro

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.macOS  Makefile.osx  README.md  StrHexToNum.h  byte_utils.c  byte_utils.h  database.c  database.h  easyconfig.c  easyconfig.h  error.h  fuses.c  fuses.h  main.c  main.h  minipro-query-db.c  minipro.c  minipro.h  minipro.spec  miniprohex  strh2num.h
CentOS/: CentOS7-x86_64.patch
bash_completion.d/: minipro
debian/: README.Debian  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  minipro.bash-completion  minipro.cron.d.ex  minipro.default.ex  minipro.doc-base.EX  minipro.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
man/: minipro.1
udev/centos7/: 80-minipro.rules
udev/rules.d/: 60-minipro.rules  80-minipro.rules
